add_executable(cpp_data_layout_performance data_performance.cpp)
add_executable(cpp_data_layout_animal animal.cpp)
add_executable(cpp_data_layout_animal_mf animal_member_function.cpp)
add_executable(cpp_data_layout_animal_hierachy animal_hierachy.cpp)
add_executable(cpp_data_layout_padding padding.cpp)
add_executable(cpp_data_layout_virtual_function animal_virtual_function.cpp)
add_executable(cpp_data_layout_virtual_inheritance animal_virtual_inheritance.cpp)
add_executable(cpp_data_layout_virtual_inheritance_multi animal_virtual_inheritance_multi.cpp)
