add_executable(fork_example fork_example.cpp)
add_executable(exec_example exec_example.cpp)
add_executable(pipe_example pipe_example.cpp)
add_executable(fifo_read_example fifo_read_example.cpp)
add_executable(fifo_write_example fifo_write_example.cpp)
add_executable(msg_read_example msg_read_example.cpp)
add_executable(msg_write_example msg_write_example.cpp)
add_executable(mmap_read_example mmap_read_example.cpp)
add_executable(mmap_write_example mmap_write_example.cpp)
add_executable(mmap_create_file mmap_create_file.cpp)
add_executable(mmap_anonymous_example mmap_anonymous_example.cpp)
add_executable(shm_read_example shm_read_example.cpp)
add_executable(shm_write_example shm_write_example.cpp)
add_executable(sem_P_example sem_P_example.cpp)
add_executable(sem_V_example sem_V_example.cpp)
