add_executable(os_con_fork_example fork_example.cpp)
add_executable(os_con_exec_example exec_example.cpp)
add_executable(os_con_pipe_example pipe_example.cpp)
add_executable(os_con_fifo_read_example fifo_read_example.cpp)
add_executable(os_con_fifo_write_example fifo_write_example.cpp)
add_executable(os_con_msg_read_example msg_read_example.cpp)
add_executable(os_con_msg_write_example msg_write_example.cpp)
add_executable(os_con_mmap_read_example mmap_read_example.cpp)
add_executable(os_con_mmap_write_example mmap_write_example.cpp)
add_executable(os_con_mmap_create_file mmap_create_file.cpp)
add_executable(os_con_mmap_anonymous_example mmap_anonymous_example.cpp)
add_executable(os_con_shm_read_example shm_read_example.cpp)
add_executable(os_con_shm_write_example shm_write_example.cpp)
add_executable(os_con_sem_P_example sem_P_example.cpp)
add_executable(os_con_sem_V_example sem_V_example.cpp)
add_executable(os_signal_interruption signal_interruption.cpp)