add_executable(os_con_fork fork_example.cpp)
add_executable(os_con_exec exec_example.cpp)
add_executable(os_con_pipe pipe_example.cpp)
add_executable(os_con_fifo_read fifo_read_example.cpp)
add_executable(os_con_fifo_write fifo_write_example.cpp)
add_executable(os_con_msg_read msg_read_example.cpp)
add_executable(os_con_msg_write msg_write_example.cpp)
add_executable(os_con_mmap_read mmap_read_example.cpp)
add_executable(os_con_mmap_write mmap_write_example.cpp)
add_executable(os_con_mmap_create_file mmap_create_file.cpp)
add_executable(os_con_mmap_anonymous mmap_anonymous_example.cpp)
add_executable(os_con_shm_read shm_read_example.cpp)
add_executable(os_con_shm_write shm_write_example.cpp)
add_executable(os_con_sem_P sem_P_example.cpp)
add_executable(os_con_sem_V sem_V_example.cpp)
add_executable(os_signal_interruption signal_interruption.cpp)